--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Character Tester.sln"
+    "dotnet.defaultSolution": "Survive or Become Tuyul.sln"
 }
